# helloc

./: .gitignore  pyproject.toml
src/extensions/hello/: hello.c  hello.i
src/hc/: __init__.py
